# stl-preview

./: .cursorignore  .gitignore  CMakeLists.txt  LICENSE.txt  README.md
.github/workflows/: cmake-multi-platform-pr.yml  cmake-multi-platform-push.yml  cmake-multi-platform.yml  coverage-pages.yml  readme-gardener.yml
cmake/: FindBoost.Atomic.cmake  FindGoogleTest.cmake  PreviewConfiguration.cmake  PreviewTest.cmake  PreviewUtils.cmake  RunConfiguration.cmake  config.h.in
cmake/config/: CheckEndianness.cmake  HaveAtomicWaitAndNotify.cmake  HaveBuiltinBitCast.cmake  HaveBuiltinConstexprAddressof.cmake  HaveCXX20Atomic.cmake  HaveConstexprBuiltinAddressof.cmake  HaveContiguousIteratorTag.cmake  HaveStringView.cmake
docs/: coverage.md  status.json  status.md
include/preview/: algorithm.h  any.h  array.h  atomic.h  bit.h  bitset.h  byte.h  cmake_config.h.in  concepts.h  concepts_v2.h  config.h  contract.h  core.h  expected.h  flat_map.h  format.h  functional.h  iterator.h  mdspan.h  memory.h  numbers.h  numeric.h  optional.h  random.h  ranges.h  span.h  string_view.h  tuple.h  type_traits.h  utility.h  variant.h
include/preview/__algorithm/: clamp.h  for_each_n.h  shift.h
include/preview/__any/: any.h  any_cast.h  bad_any_cast.h
include/preview/__array/: to_array.h
include/preview/__atomic/: atomic.h  atomic_flag.h  atomic_functions.h  atomic_notify_all.h  atomic_notify_one.h  atomic_wait.h
include/preview/__bit/: bit_cast.h  byteswap.h  endian.h
include/preview/__bitset/: bitset.h
include/preview/__compare/: synth_three_way.h  three_way_comparable.h
include/preview/__concepts/: assignable_from.h  boolean_testable.h  common_reference_with.h  common_with.h  comparison_common_type_with.h  constructible_from.h  convertible_to.h  copy_constructible.h  copyable.h  default_initializable.h  dereferenceable.h  derived_from.h  derived_from_single_crtp.h  destructible.h  different_from.h  equality_comparable.h  equivalence_relation.h  floating_point.h  implicit_expression_check.h  integer_class.h  integer_like.h  integral.h  invocable.h  movable.h  move_constructible.h  not_null.h  partially_ordered_with.h  predicate.h  regular.h  relation.h  requires_expression.h  same_as.h  semiregular.h  signed_integral.h  strict_weak_order.h  subtractable.h  swap.h  swappable.h  swappable_with.h  totally_ordered.h  (+3 more)
include/preview/__concepts_v2/: common_reference_with.h  concept_base.h  constructible_from.h  convertible_to.h  derived_from.h  destructible.h  floating_point.h  integral.h  require.h  same_as.h  signed_integral.h  unsigned_integral.h
include/preview/__contract/: specifiers.h
include/preview/__core/: android_version.h  assert.h  byte.h  consteval.h  constexpr.h  cxx_version.h  decay_copy.h  deprecated.h  inline_variable.h  maybe_unused.h  no_unique_address.h  nodiscard.h  noreturn.h  static_assert.h  std_version.h
include/preview/__expected/: bad_expected_access.h  expected.h  monadic.h  unexpect.h  unexpected.h
include/preview/__flat_map/: flat_map.h  flat_multimap.h  sorted_equivalent.h  sorted_unique.h
include/preview/__format/: basic_format_context.h  basic_format_parse_context.h  basic_format_string.h  basic_formatter.h  format_error.h  format_spec.h  formatter.h
include/preview/__functional/: bind_back.h  bind_front.h  bind_partial.h  default_searcher.h  equal_to.h  fold.h  greater.h  greater_equal.h  hash_array.h  identity.h  indirect.h  invoke.h  is_reference_wrapper.h  less.h  less_equal.h  not_equal_to.h  not_fn.h  reference_wrapper.h  wrap_functor.h
include/preview/__iterator/: advance.h  basic_const_iterator.h  bidirectional_iterator.h  common_iterator.h  contiguous_iterator.h  counted_iterator.h  data.h  default_sentinel_t.h  empty.h  forward_iterator.h  incrementable.h  incrementable_traits.h  indirect_binary_predicate.h  indirect_equivalence_relation.h  (+51 more)
test/: CMakeLists.txt  algorithm.cc  algorithm_ranges.cc  any.cc  array.cc  atomic.cc  bit.cc  bitset.cc  concepts.cc  concepts_test.cc  concepts_v2.cc  expected.cc  flat_map.cc  format.cc  functional.cc  functional_test.cc  gtest.h  iterator.cc  iterator_test.cc  mdspan.cc  memory.cc  memory_test.cc  numeric.cc  random.cc  ranges.cc  ranges_concepts.cc  ranges_test.cc  ranges_views.cc  span.cc  string_view.cc  test_utils.h  tuple.cc  tuple_test.cc  type_traits.cc  type_traits_test.cc  utility.cc  utility_test.cc  variant.cc
test/atomic/: atomic_flag.cc  fetch_add.cc  fetch_min_max.cc  parameters.cc  wait_and_notify.cc
test/byte/: byte_test.cc
test/mdspan/: ConvertibleToIntegral.h  CustomTestLayouts.h  MinimalElementType.h  README.md  print_to.h
test/mdspan/default_accessor/: access.cc  ctor_conversion.cc  ctor_default.cc  offset.cc  types.cc
test/mdspan/extents/: CtorTestCombinations.h  ctor.cc  dextents.cc  dims.cc  extents.cc  obs_static.cc  types.cc
test/mdspan/layout_left/: comparison.cc  ctor_default.cc  ctor_extents.cc  ctor_layout_right.cc  ctor_layout_stride.cc  ctor_mapping.cc  index_operator.cc  properties.cc  required_span_size.cc  static_requirements.cc  stride.cc
test/mdspan/layout_right/: comparison.cc  ctor_default.cc  ctor_extents.cc  ctor_layout_left.cc  ctor_layout_stride.cc  ctor_mapping.cc  extents.verify.cpp  index_operator.cc  properties.cc  required_span_size.cc  static_requirements.cc  stride.cc
test/mdspan/layout_stride/: comparison.cc  ctor_default.cc  ctor_extents_array.cc  ctor_extents_span.cc  ctor_strided_mapping.cc  deduction.cc  index_operator.cc  is_exhaustive_corner_case.cc  properties.cc  required_span_size.cc  static_requirements.cc  stride.cc
test/mdspan/mdspan/: CustomTestAccessors.h  assign.cc  conversion.cc  conversion.verify.cpp  ctor.copy.cc  ctor.default.cc  ctor.dh_array.cc  ctor.dh_extents.cc  ctor.dh_integers.cc  ctor.dh_map.cc  ctor.dh_map_acc.cc  ctor.dh_span.cc  ctor.move.cc  deduction.cc  element_type.cc  extents.verify.cpp  index_operator.cc  mapping.verify.cpp  move.cc  properties.cc  swap.cc  types.cc
test/optional/: optional_test.cc
test/type_traits/: arity_test.cc  conjunction_test.cc
tools/: readme_gardener.py
(+372 files in other folders)
